<resources>
    <string name="app_name">FIRST</string>
    <string name="telephone_number">请输入手机号</string>
    <string name="login_password">请输入密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="login">登陆</string>
    <string name="telephone_register">立即使用手机号注册账号</string>
    <string name="register">注册</string>
    <string name="register_name">昵称</string>
    <string name="register_password">密码不能少于6位</string>
    <string name="login_true">登陆成功</string>
    <string name="login_false">登陆失败,请重新登录！</string>
    <string name="register_true">注册成功</string>
    <string name="register_false">注册失败，请重新注册！</string>
    <string name="find_password">找回密码</string>
    <string name="used_username">请输入你以前的用户名</string>
    <string name="no_username">没有此用户！</string>
    <string name="user_exist">此用户已存在！</string>
</resources>
