<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/five"
    android:gravity="top"
    android:orientation="vertical"
    >

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@null">

        <Button
            android:id="@+id/back_button"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:drawableLeft="@drawable/ic_keyboard_backspace_black_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="0dp"
            android:text="@string/login"
            android:textColor="#000033"
            android:textSize="20dp"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"

        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/login_user_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/telephone_number"
            android:textColor="#999999"
            android:textColorHint="#2F4F4F"
            />

        <EditText
            android:id="@+id/login_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/login_password"
            android:textColor="#999999"
            android:textColorHint="#2F4F4F"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"

            android:orientation="horizontal">

            <Button
                android:id="@+id/forget_password_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:text="@string/forget_password"
                android:textColor="#339933"/>

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@null"
                android:text="@string/login"
                android:textColor="#339933"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@null"
        android:padding="18dp"
        android:text="@string/telephone_register"
        android:textColor="#339933"/>
</LinearLayout>
