<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/seven"
    android:orientation="vertical"
    >
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@null">
    <Button
        android:id="@+id/back_button"
        android:background="@null"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:drawableLeft="@drawable/ic_keyboard_backspace_black_24dp"/>
    </android.support.v7.widget.Toolbar>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="70dp"
        android:textColor="#339933"
        android:textSize="30dp"
        android:text="@string/register"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textColor="#339933"
            android:text="@string/register_name"/>
        <EditText
            android:id="@+id/register_user_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="#999999"
            android:layout_marginTop="0dp"
           />
        <EditText
            android:id="@+id/register_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="#999999"
            android:textColorHint="#2F4F4F"
            android:hint="@string/register_password"
            />
        <Button
            android:background="@null"
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="#339933"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"/>
    </LinearLayout>

</LinearLayout>
